--- a/network/templates/responses/add_response.html
+++ b/network/templates/responses/add_response.html
@@ -23,6 +23,7 @@
                         <h6 class="m-0 font-weight-bold text-primary">Response</h6>
                     </div>
                     <div class="card-body">
+                        {{ alumni_data_form }}
                         <form method="post">
                             {% csrf_token %}
                             <p><b>Name:</b></p> <input name="full_name"/>
